--- a/src/Blazor.Extensions.Canvas.JS/package.json
+++ b/src/Blazor.Extensions.Canvas.JS/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {
     "@types/emscripten": "1.39.6",
-    "ts-loader": "^9.2.6",
+    "ts-loader": "9.2.6",
     "typescript": "4.5.4",
     "webpack": "5.66",
     "webpack-cli": "4.9.1",
