--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,7 +30,7 @@ jobs:
       run: dotnet pack -c Release --no-restore --no-build --include-symbols -p:SymbolPackageFormat=snupkg -o .
 
     - name: Publish
-      run: dotnet nuget push *.nupkg --skip-duplicate --api-key ${{secrets.GITHUB_TOKEN}} --source "github"
+      run: dotnet nuget push *.nupkg --skip-duplicate --api-key ${{secrets.GITHUB_TOKEN}}
 
     - name: Create Release
       uses: actions/create-release@master
