--- a/src/Blazor.Extensions.Canvas/Blazor.Extensions.Canvas.csproj
+++ b/src/Blazor.Extensions.Canvas/Blazor.Extensions.Canvas.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <Title>Blazor Extensions Canvas</Title>
     <Description>HTML5 Canvas API implementation for ASP.NET Core Blazor.</Description>
-    <PackageId>Blazor.Extensions.Canvas</PackageId>
-    <PackageVersion>1.1.1</PackageVersion>
+    <PackageId>Sparcpoint.Blazor.Extensions.Canvas</PackageId>
+    <PackageVersion>1.2.0</PackageVersion>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -20,7 +20,18 @@
     <TargetFramework>net6.0</TargetFramework>
     <PackageProjectUrl>https://github.com/Jcouls29/Canvas</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Jcouls29/Canvas</RepositoryUrl>
+    <Authors>Blazor Extensions Contributors; Sparcpoint LLC</Authors>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <AssemblyVersion>1.2.0.0</AssemblyVersion>
+    <FileVersion>1.2.0.0</FileVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.1" />
